--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.0-alpha01"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1"
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.android.support:recyclerview-v7:29.0.0'
     kapt "androidx.room:room-compiler:2.2.0-alpha01"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
